// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render the footer component 1`] = `
<div>
  <footer
    role="contentinfo"
  >
    <div
      class="nhsuk-footer-container"
    >
      <div
        class="nhsuk-width-container"
      >
        <h2
          class="nhsuk-u-visually-hidden"
        >
          Support links
        </h2>
        <div
          class="nhsuk-footer"
        >
          <ul
            class="nhsuk-footer__list"
          >
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Accessibility statement
              </a>
            </li>
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Contact us
              </a>
            </li>
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Cookies
              </a>
            </li>
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Terms and conditions
              </a>
            </li>
          </ul>
          <div>
            <p
              class="nhsuk-footer__copyright"
            >
              © 
              NHS England
            </p>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`should render the footer component 2`] = `
<div>
  <footer
    role="contentinfo"
  >
    <div
      class="nhsuk-footer-container"
    >
      <div
        class="nhsuk-width-container"
      >
        <h2
          class="nhsuk-u-visually-hidden"
        >
          Support links
        </h2>
        <div
          class="nhsuk-footer"
        >
          <ul
            class="nhsuk-footer__list nhsuk-footer__meta"
          >
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Accessibility statement
              </a>
            </li>
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Contact us
              </a>
            </li>
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Cookies
              </a>
            </li>
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="nhsuk-footer__list-item nhsuk-footer-default__list-item"
            >
              <a
                class="nhsuk-footer__list-item-link"
                href="#"
              >
                Terms and conditions
              </a>
            </li>
          </ul>
          <div>
            <p
              class="nhsuk-footer__copyright"
            >
              © 
              NHS England
            </p>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;
